# streaming-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
dev/nginx/: default.conf.template
streaming/: api.py  app.py  consumer.py  exceptions.py  integration.py  main.py  publisher.py  registry.py  settings.py  ws.py
streaming/domain/: consumer.py  publisher.py  spawner.py
streaming/mq/: base.py  connection.py  consumer.py  exceptions.py  factories.py  publisher.py  settings.py
